ZVP chapter editing

--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -127,17 +127,24 @@ The oscillatory term in equation \ref{eq:zvp_labAfull} demonstrates the propagat
 \begin{equation}\label{eq:zvp-zero_v}
 	v_\phi = \frac{\omega_L}{k} = \frac{c}{\beta} = -\frac{c^2}{v_\mathrm{f}}.
 \end{equation}
-While in their original ZVP paper Baeva laid some doubt on their version of this calculation, instead suggesting similarity theory predicts zeroes propagate at speed $c$ \cite{baevaZeroVectorPotential2011}, the theory of High Harmonic Generation rejects this alternative. It is well known that the emission of reflected radiation occurs primarily at the point where the transverse vector potential passes through zero \cite{cousensElectronTrajectoriesAssociated2020} but equally that the width of the radiated pulse depends on the advance time emission point \cite{edwardsXRayEmissionEffectiveness2020}. If the zeroes moved at speed $c$, then the observed emitted pulse would be infinitely thin, producing radiation with perfect coherence in all cases. In practice however, simulations have suggested advanced time bunch widths are finite and decreasing with increasing laser intensity \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by equation \ref{eq:zvp-zero_v}. As the laser intensity increases, $v_\mathrm{f}$ naturally increases and thus the zeroes propagate closer to the speed of light, reducing the advanced time bunch width.
+While in their original ZVP paper Baeva laid some doubt on their version of this calculation, instead suggesting similarity theory predicts zeroes propagate at speed $c$ \cite{baevaZeroVectorPotential2011}, the theory of High Harmonic Generation rejects this alternative. It is well known that the emission of reflected radiation occurs primarily at the point where the transverse vector potential passes through zero \cite{cousensElectronTrajectoriesAssociated2020} but equally that the width of the radiated pulse depends on the advance time emission point \cite{edwardsXRayEmissionEffectiveness2020}. If the zeroes moved at speed $c$, then the observed emitted pulse would be infinitely thin, producing radiation with perfect coherence in all cases. This is unphysical and simulations have suggested finite advanced time bunch widths decreasing rapidly with increasing laser intensity \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by equation \ref{eq:zvp-zero_v}. As the laser intensity increases, $v_\mathrm{f}$ naturally increases. Thus, the zeroes propagate closer to the speed of light and reducing the advanced time bunch width.
 
-After expulsion from the plasma alongside zeroes of the vector potential they release CSE, then they accelerate and they they are rotated back.
+To summarise, for a sufficiently intense laser pulse, electrons at the surface of an irradiated solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, co-propagating with the zeroes of the vector potential.
 
+In the work by Cousens \textit{et al} on electron trajectories in this regime, it is noted that a \ac{CSE} radiation burst occurs when the transverse momentum goes to zero \cite{cousens2020}, corresponding to the passage of the zero of the transverse vector potential. \ac{CSE} and\ac{ZVP} are therefore intrinsically linked, however, while CSE focuses on reflection and the \ac{HHG} spectrum, \ac{ZVP} is concerned with laser pulse energy absorption. 
 
-To summarise, for a sufficiently intense laser pulse, electrons at the surface of an irradiated solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, co-propagating with the zeroes of the vector potential and gaining energy as they discharge the pseudocapacitor field. The electron bunch is then rotated by the laser pulse and launched into the bulk at high energy, as it does so emitting coherent synchrotron radiation in transmission and reflection.
+After expulsion from the plasma, the pseudocapacitor is discharged as the electron bunch accelerates across it. Upon encountering the subsequent laser pulse peak amplitude, the bunch is then rotated back towards the plasma and launched into the bulk at high energy along the laser propagation axis (by conservation of transverse momentum in the plasma bulk), as it does so emitting coherent synchrotron radiation in transmission.
 
 \subsection{ZVP electron bunch energies}\label{sec:zvp_energies_derivation}
-In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings for electron bunches produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density. Later this was then extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with closer consideration of both the constants of proportionality and their consequences. Note that throughout the electron bunch is treated as infinitessimally thin, as proved to be a reasonable assumption in previous work on ZVP \cite{baevaTheoryHighorderHarmonic2006, savinAttosecondscaleAbsorptionExtreme2017, savinEnergyAbsorptionLaserQED2019}. Sub-bunch dynamics have been explored in more detail by Gonoskov \textit{et al} \cite{gonoskovTheoryRelativisticRadiation2018}.
+In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings in \ac{1D} for an electron bunch produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density. This was extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with closer consideration of both the constants of proportionality and their consequences. Note that throughout the electron bunch is treated as infinitessimally thin, as proved to be a reasonable assumption in previous work on ZVP \cite{baevaTheoryHighorderHarmonic2006, savinAttosecondscaleAbsorptionExtreme2017, savinEnergyAbsorptionLaserQED2019}. Sub-bunch dynamics have been explored in more detail by Gonoskov \textit{et al} \cite{gonoskovTheoryRelativisticRadiation2018}.
 
-Consider again the semi-infinite block of plasma presented in figure \ref{fig:introplasmafrequency}, normally irradiated by a laser pulse with wavelength $\lambda_\mathrm{L}$ and peak electric field, $E_\mathrm{L}$. It is now the ponderomotive pressure of the laser that displaces the electron fluid. The electron surface moves inwards until the pressure exerted by the peak instantaneous ponderomotive pressure of the laser pulse cycle,
+The expressions for energies in equations \ref{eq:zvp_T} and \ref{eq:zvp_U} require the electron bunch to fully discharge the pseudo-capacitor before interaction with the subsequent laser pulse peak. Since the electron bunch travels at speed $\approx c$, the peak displacement (and thus the pseudo-capacitor width) must satisfy
+\begin{equation}\label{eq:zvp-deltax_condition}
+	\Delta x \le \frac{\lambda}{8}.
+\end{equation}
+Using equation \ref{eq:zvp_dx}, it is clear Equation \ref{eq:zvp-deltax_condition} is satisfied for $ S\ge 1.3$ at normal incidence.
+
+Consider again the semi-infinite block of plasma presented in Figure \ref{fig:introplasmafrequency}, normally irradiated by a laser pulse with wavelength $\lambda_\mathrm{L}$ and peak electric field, $E_\mathrm{L}$. It is now the ponderomotive pressure of the laser that displaces the electron fluid in this picture. The electron surface moves inwards until the pressure exerted by the peak instantaneous ponderomotive pressure of the laser pulse cycle,
 \begin{equation}
 	\mathbf{P}_\mathrm{L} = \epsilon_0 E^2_\mathrm{L} \hat{\mathbf{x}} = \epsilon_0 \left(\frac{a_0\omega_\mathrm{L}m_\mathrm{e}c}{e}\right)^2 \hat{\mathbf{x}}
 \end{equation}
@@ -181,19 +188,15 @@ Hence,
 \begin{equation}
 	\eta_\mathrm{ZVP} = \frac{U_\mathrm{ZVP}}{U_\mathrm{L,1/4}} = \frac{2}{\pi S}.
 \end{equation}
-Interestingly, this analytical result predicts the trend observed by A. Savin \cite{savinModellingLaserPlasmaInteractions2019} in \ac{PIC} simulations both in magnitude and in scaling. Indeed, A. Savin demonstrated 
+Interestingly, this analytical result predicts the trend observed by A. Savin \cite{savinModellingLaserPlasmaInteractions2019} in \ac{PIC} simulations both in magnitude and in scaling. Indeed, A. Savin demonstrated in numerical simulation
 \begin{equation}
 	\eta_\mathrm{ZVP} \sim S^{-1.000(3)},
 \end{equation}
-however, this result led A. Savin to conclude that increasing $S$ reduces absorption, increasing the energy in the reflected \ac{HHG} beam thus increasing high harmonic efficiency, seemingly in tension with the results of other works \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011,edwardsXRayEmissionEffectiveness2020}. The resolution arises from awareness of two distinct conversion efficiencies that describe the reflected harmonic spectrum: the total conversion efficiency into the full reflected beam and the conversion efficiency for individual harmonics. While the total conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum also decreases, reducing \ac{HHG} efficiency. Indeed, high X-ray harmonic efficiency necessitates high reflection inefficiencies due to the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation \cite{edwardsXRayEmissionEffectiveness2020}, a caveat not often considered in the quest for higher-order harmonics. The impact of the ZVP mechanism on \ac{HHG} will be discussed in great detail in the following chapter.
+however, this result led A. Savin to conclude that increasing $S$ reduces absorption, increasing the energy in the reflected \ac{HHG} beam thus increasing high harmonic efficiency, seemingly in tension with the results of other works \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011,edwardsXRayEmissionEffectiveness2020}. The resolution arises from awareness of two distinct conversion efficiencies that describe the reflected harmonic spectrum: the total conversion efficiency into the full reflected beam and the conversion efficiency for individual harmonics. While the overall conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum becomes shallower and \ac{HHG} efficiency increases. Indeed, high harmonic efficiency necessitates high reflection inefficiencies due to the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation \cite{edwardsXRayEmissionEffectiveness2020}. Harmonic efficiencies will be discussed in more detail in the following Chapters, however, at currently accessible laser intensities, it would appear that X-ray harmonics are produced with greater efficiency for high $S$ \cite{pukhovRelativisticHighHarmonics2009}, a regime generally neglected in parameter scans given the computational and experimental challenges of accessing it.
 
-The expressions for energies in equations \ref{eq:zvp_T} and \ref{eq:zvp_U} require the electron bunch to fully discharge the pseudo-capacitor before interaction with the subsequent laser pulse peak. Since the electron bunch travels at speed $\approx c$, the peak displacement (and thus the pseudo-capacitor width) must satisfy
-\begin{equation}\label{eq:zvp-deltax_condition}
-	\Delta x \le \frac{\lambda}{8}.
-\end{equation}
-Using equation \ref{eq:zvp_dx}, it is clear equation \ref{eq:zvp-deltax_condition} is satisfied for $ S\ge 1.3$ for normal incidence.
+Unfortunately, it is not possible to link the energy scaling derived in this Section to \ac{CSE} since the harmonic emission occurs before the \ac{ZVP} acceleration phase. In Dromey \textit{et al}, the \ac{CSE} regime was demonstrated for the first time in transmission through thin foils, however laser pulses are now of sufficient intensity to access \ac{CSE} in reflection from solid targets. This has been identified as a more efficient approach if it can be reached due to the production of higher density and shorter duration electron bunches and therefore brighter and more coherent \ac{CSE} \cite{edwardsElectronNanobunchWidthDominatedSpectralPower2020}. 
 
-\subsection{ZVP bunches oblique incidence scaling and internal bunch structure}
+\subsection{ZVP bunches oblique incidence scaling}
 This section is inspired by ideas from the work of Gonoskov \textit{et al} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Vincenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} to extend the theory of the ZVP mechanism for energy absorption to the more practical\footnote{Not only is this more feasible in experiment but has been shown to optimise HHG \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}.} case of oblique incidence. 
 
 Provided the plasma-vacuum boundary is sufficiently steep, the plasma electrons will respond adiabatically to the laser pulse and arrange themselves to form a pseudocapacitor longitudinal electric field $E_\mathrm{C}$ at the plasma surface. At all points in this adiabatic `pushing' phase, the surface electrons will be in a quasi-static equilibrium \textit{i.e.} there will be a balance between the electromagnetic forces on them. Consider again the laser pulse incident on a solid density plasma existing for $x>0$ at angle $\theta$. Transforming to the frame of reference in which the laser is normally incident (quantities in this frame are indicated by the primed symbol), the electron and ion bulk plasma species stream at velocity $\mathbf{v}_\mathrm{d} = -c \sin\theta \hat{\mathbf{y}}$.  Applying the Lorentz force law along the longitudinal direction ($\hat{\mathbf{x}}$), for a displacement of the electron fluid $x'_\mathrm{e}$ (one assumes that the expression for a single electron at the surface describes the surface since all electrons follow similar trajectories), travelling at speed $\mathbf{v'}$,
@@ -232,7 +235,8 @@ Transforming back to the lab frame,
 \begin{equation}
 	x_\mathrm{p} = \frac{\cos^2\theta}{kS(1\pm \sin\theta)}.
 \end{equation}
-Convincingly this reduces to equation \ref{eq:zvp_dx} for $\theta =0$ and predicts the suppression and enhancement of the two surface oscillations per laser pulse cycle. Explicitly, for a laser pulse propagating at $y = x\tan\theta$, the peak displacement of the electron surface is enhanced for $\mathbf{B}_\mathrm{L}$ in the $+\hat{\mathbf{z}}$-direction and suppressed for $\mathbf{B}_\mathrm{L}$ in the $-\hat{\mathbf{z}}$-direction.
+% TODO here include the plot of two foci out of phase showing the suppression and enhancement based on angle.
+Convincingly, this reduces to equation \ref{eq:zvp_dx} for $\theta =0$ and predicts the suppression and enhancement of the two surface oscillations per laser pulse cycle. Explicitly, for a laser pulse propagating at $y = x\tan\theta$, the peak displacement of the electron surface is enhanced for $\mathbf{B}_\mathrm{L}$ in the $+\hat{\mathbf{z}}$-direction and suppressed for $\mathbf{B}_\mathrm{L}$ in the $-\hat{\mathbf{z}}$-direction.
 
 Again, integrating to find the work done as the electron bunch accelerates across the pseudocapacitor,
 \begin{equation}\label{eq:zvp_Tzvp_theta}
@@ -246,7 +250,7 @@ Finally, the total bunch energy as a function of $\theta$,
 \begin{equation}\label{eq:zvp_Uzvp_theta}
 	U_\mathrm{ZVP}(\theta) = \frac{\sigma n_\mathrm{c}}{k}\times \frac{1}{2}m_\mathrm{e}c^2 \frac{a^3_0}{\bar{n}_\mathrm{e}}\frac{\cos^6\theta}{(1\pm \sin\theta)^3}.
 \end{equation}
-Thus oblique incidence can increase laser absorption efficiency for higher $S$ plasmas which are currently more easily accessed compared to the more optimal low $S$ plasmas.
+As antipated, oblique incidence can increase laser absorption efficiency for higher $S$ plasmas which are currently more easily accessed compared to the more optimal low $S$ plasmas.
 
 \subsection{Defining characteristics of the ZVP mechanism}\label{sec:zvp-characteristics}
 In her original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} outlined 6 defining characteristics of the \ac{ZVP} mechanism, namely,
@@ -256,22 +260,22 @@ In her original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZ
 	\item The generation of fast electron bunches with ultra-short temporal duration;
 	\item That such fast electron bunches follow the energy scalings of equations \ref{eq:zvp_T} and total energy \ref{eq:zvp_U};
 	\item Injection of the fast electron bunches is along the propagation axis of the laser pulse;
-	\item There must be an intrinsic link must exist between the fast electron bunches and coherent X-ray \ac{HHG};
+	\item There must be an intrinsic link between the fast electron bunches and coherent \ac{HHG};
 \end{enumerate}
-with the moving zeros within the skin layer being the defining delineator between this post-ponderomotive regime of laser pulse energy absorption and all other proposed mechanisms. While such observational requirements are far beyond the reaches of current experimental know-how, numerical simulations in both 1- \cite{baevaZeroVectorPotential2011} and 2-dimensions \cite{savinAttosecondscaleAbsorptionExtreme2017} have confirmed the above points. Now is presented the first \ac{3D} simulations attempting to demonstrate these criteria.
+with the moving zeros within the skin layer being the key delineator between this post-ponderomotive regime of laser pulse energy absorption and all other proposed mechanisms. While such observational requirements are far beyond the reaches of current experimental know-how, numerical simulations in both 1- \cite{baevaZeroVectorPotential2011} and 2-dimensions \cite{savinAttosecondscaleAbsorptionExtreme2017} have confirmed the above points. Now is presented the first \ac{3D} simulations attempting to demonstrate these criteria.
 
 \section{Numerical simulations of the ZVP mechanism}
-This thesis relies on the analysis of 1,2 and 3D \ac{PIC} simulations, primarily using the massively-parallel and open-source simulation code Smilei \cite{derouillatSmileiCollaborativeOpensource2018}. Simulation parameters will be provided throughout.
+This thesis relies on the analysis of 1,2 and 3D \ac{PIC} simulations, primarily using the massively-parallel and open-source simulation code Smilei \cite{derouillatSmileiCollaborativeOpensource2018}. Simulation parameters are provided throughout.
 
 \subsection{The ZVP mechanism in 3D3V}\label{sec:zvp-3Dsimulations}
-The 3D simulation results are presented in figure \ref{fig:zvp3d} alongside comparison to an equivalent 2D simulation.
+3D simulation results are presented in Figure \ref{fig:zvp3d} alongside comparison to an equivalent 2D simulation.
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/zvp/zvp_3D}
 	\caption[Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. ]{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=\lambda_\mathrm{L}/2$ for a-c) respectively for better clarity on the internal structure of the plasma bulk. The accompanying plots for figures e) and f) are corresponding 2D PIC simulation results.}
 	\label{fig:zvp3d}
 \end{figure}
-Simulation parameters are given in table \ref{tab:parameters}, such parameters are compatible with the 10 PW ELI-NP state-of-the-art short pulse laser facility \cite{tanakaCurrentStatusHighlights2020} and foam targets.
+Simulation parameters are given in Table \ref{tab:parameters}, such parameters are compatible with the 10 PW ELI-NP state-of-the-art short pulse laser facility \cite{tanakaCurrentStatusHighlights2020} and foam targets.
 \begin{table}[]
 	\begin{center}
 	\begin{tabular}{lll}
@@ -283,7 +287,7 @@ Simulation parameters are given in table \ref{tab:parameters}, such parameters a
 		Beam waist, $w_\mathrm{L}$ (nm)                            & 6$\lambda$                           & 12$\pi$                     \\
 		Focal point, ($x_f$, $y_f$, $z_f$) (nm)                  & (0.5$\lambda$, 5$\lambda$, $0.5\lambda$)             & ($\pi$, 10$\pi$, $\pi$)           \vspace{0.25cm}\\ 
 		Spatial envelope, $E_i$, $i = y,z$                           & \multicolumn{2}{l}{$E_i \sim e^{-(i-i_f)^2/w_\mathrm{L}^2}$}                \\
-		Temporal envelope, $E_t$                          & \multicolumn{2}{l}{$E_t \sim e^{-(t-4\lambda/c)^2/(4\lambda/3c)^2}$} \vspace{0.15cm}\\ \hline \hline
+		Temporal envelope, $E_t$                          & \multicolumn{2}{l}{$E_t \sim e^{-(t-4\lambda/c)^2/((4\lambda/3c)^2\ln 2)}$} \vspace{0.15cm}\\ \hline \hline
 		\multicolumn{3}{c}{Simulation box}   \\ \hline
 		Size, $x \times y\times z$ (nm)                           & $2\lambda \times 9\lambda \times \lambda$          & $4\pi \times 18\pi \times 2\pi$         \\
 		Sim length (fs)                                   & 35.22                                & 20$\pi$                     \\
